Changed Constructors with Builder for Exceptions